        * new class "Handler" is a base class for handlers, with nothing
          WSGI-specific.  Maybe useful for writing custom handlers.
        * changed Request class:
            * constructor now takes a Client object rather than the
              combination of Connection, server id and client id.
            * renamed Request.kill => Request.disconnect
        * changed Connection class:
            * send() now takes a Client object rather than a (target,cid) pair.
        * changed WSGIHandler class:
            * handle_request method split into "handle_request" for creating
              threads and other management tasks, and "process_request" for
              doing the actual work.
    * don't force monkey-patching for gevent backend.
    * added some utility middleware for use by the server:
        * GZipMiddleware:  gzip response bodies
        * BufferMiddleware:  buffer response bodied, for betting compression

v0.3.0

    * New method Connection.shutdown() to stop receiving more requests,
      but allow processing of any that are already received.
    * Much improved custom request protocol with clean shutdown:
          * socket type changed from from REQ to XREQ.
          * helper renamed from pull2queue => devices.pull2xreq
          * handler now sends an explicit shutdown message to the socket.
          * socket can push requests to the handler asynchronously.
    * WSGIHandler._shutdown() now waits for all in-progress requests to
      complete before it terminates the server.
    * Add experimental gevent IO module
    * Install command-line script "m2wsgi".

v0.2.0

    * Transparent support for streaming reads of large request bodies.
    * Support for a REQ-based handler protocol as an alternative to
      mongrel2's standard PULL-based protocol.  See m2wsgi/pull2qeue.py.
    * And of course, many bugfixes and WSGI compatability improvements.

v0.1.0

    * initial release; you might say *everything* has changed.